--- a/requirements.txt
+++ b/requirements.txt
@@ -1,31 +1,39 @@
-# API specific requirements
-fastapi
-uvicorn[standard]
-
-# Scraping and core logic
-selenium==4.26.1
-uqload_dl==1.1
-
-# Indirect dependencies (safer to keep them)
+annotated-types==0.7.0
 anyio==4.6.2.post1
 attrs==24.2.0
 certifi==2024.8.30
 charset-normalizer==3.4.0
+click==8.3.0
+fastapi==0.118.0
 h11==0.14.0
 httpcore==1.0.6
+httptools==0.6.4
 httpx==0.25.1
 idna==3.10
 outcome==1.3.0.post0
 packaging==24.1
+pydantic==2.11.10
+pydantic_core==2.33.2
 PySocks==1.7.1
 python-dotenv==1.0.1
+PyYAML==6.0.3
 requests==2.32.3
+selenium==4.26.1
+setuptools==80.9.0
 sniffio==1.3.1
 sortedcontainers==2.4.0
+starlette==0.48.0
 trio==0.27.0
 trio-websocket==0.11.1
+typing-inspection==0.4.2
 typing_extensions==4.12.2
+undetected-chromedriver==3.5.5
+uqload_dl==1.1
 urllib3==2.2.3
+uvicorn==0.37.0
+uvloop==0.21.0
+watchfiles==1.1.0
 webdriver-manager==4.0.2
 websocket-client==1.8.0
+websockets==15.0.1
 wsproto==1.2.0
