--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -1,68 +1,68 @@
-name: Deploy to VPS
+# name: Deploy to VPS
 
-on:
-  push:
-    branches:
-      - main
-  pull_request:
-    branches:
-      - main
-    types: [closed]
+# on:
+#   push:
+#     branches:
+#       - main
+#   pull_request:
+#     branches:
+#       - main
+#     types: [closed]
 
-jobs:
-  deploy:
-    # Déployer seulement si le push est sur main OU si la PR est merged
-    if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
+# jobs:
+#   deploy:
+#     # Déployer seulement si le push est sur main OU si la PR est merged
+#     if: github.event_name == 'push' || (github.event_name == 'pull_request' && github.event.pull_request.merged == true)
     
-    runs-on: ubuntu-latest
+#     runs-on: ubuntu-latest
     
-    steps:
-    - name: 🚀 Déploiement sur VPS
-      uses: appleboy/ssh-action@v1.0.0
-      with:
-        host: ${{ secrets.VPS_HOST }}
-        username: ${{ secrets.VPS_USERNAME }}
-        key: ${{ secrets.VPS_SSH_KEY }}
-        port: ${{ secrets.VPS_PORT }}
-        script: |
-          echo "📦 Début du déploiement..."
+#     steps:
+#     - name: 🚀 Déploiement sur VPS
+#       uses: appleboy/ssh-action@v1.0.0
+#       with:
+#         host: ${{ secrets.VPS_HOST }}
+#         username: ${{ secrets.VPS_USERNAME }}
+#         key: ${{ secrets.VPS_SSH_KEY }}
+#         port: ${{ secrets.VPS_PORT }}
+#         script: |
+#           echo "📦 Début du déploiement..."
           
-          # Se déplacer dans le répertoire du projet
-          cd "${{ secrets.VPS_PROJECT_PATH }}" || exit 1
+#           # Se déplacer dans le répertoire du projet
+#           cd "${{ secrets.VPS_PROJECT_PATH }}" || exit 1
           
-          # Sauvegarder les fichiers locaux sensibles
-          echo "💾 Sauvegarde des fichiers locaux..."
-          if [ -f "deploy/systemd/streams_dl.service" ]; then
-            cp deploy/systemd/streams_dl.service deploy/systemd/streams_dl.service.backup
-          fi
+#           # Sauvegarder les fichiers locaux sensibles
+#           echo "💾 Sauvegarde des fichiers locaux..."
+#           if [ -f "deploy/systemd/streams_dl.service" ]; then
+#             cp deploy/systemd/streams_dl.service deploy/systemd/streams_dl.service.backup
+#           fi
           
-          # Récupérer les dernières modifications
-          echo "🔄 Mise à jour du code..."
-          git fetch origin
-          # Sauvegarder les modifications locales non commitées
-          git stash
-          git reset --hard origin/main
-          # Restaurer les modifications locales si besoin
-          git stash pop || true
+#           # Récupérer les dernières modifications
+#           echo "🔄 Mise à jour du code..."
+#           git fetch origin
+#           # Sauvegarder les modifications locales non commitées
+#           git stash
+#           git reset --hard origin/main
+#           # Restaurer les modifications locales si besoin
+#           git stash pop || true
           
-          # Restaurer le fichier service local
-          if [ -f "deploy/systemd/streams_dl.service.backup" ]; then
-            mv deploy/systemd/streams_dl.service.backup deploy/systemd/streams_dl.service
-          fi
+#           # Restaurer le fichier service local
+#           if [ -f "deploy/systemd/streams_dl.service.backup" ]; then
+#             mv deploy/systemd/streams_dl.service.backup deploy/systemd/streams_dl.service
+#           fi
           
-          # Activer l'environnement virtuel et mettre à jour les dépendances
-          echo "📚 Installation des dépendances..."
-          # Lancer le script de déploiement
-          echo "🚀 Exécution du script de déploiement..."
-          if [ -x deploy/deploy.sh ]; then
-            ./deploy/deploy.sh
-          else
-            echo "Deploy script not found or not executable"
-            exit 1
-          fi
+#           # Activer l'environnement virtuel et mettre à jour les dépendances
+#           echo "📚 Installation des dépendances..."
+#           # Lancer le script de déploiement
+#           echo "🚀 Exécution du script de déploiement..."
+#           if [ -x deploy/deploy.sh ]; then
+#             ./deploy/deploy.sh
+#           else
+#             echo "Deploy script not found or not executable"
+#             exit 1
+#           fi
           
-          echo "🎉 Déploiement terminé avec succès!"
-          echo "🚀 Exécution du script de déploiement..."
-          ./deploy/deploy.sh
+#           echo "🎉 Déploiement terminé avec succès!"
+#           echo "🚀 Exécution du script de déploiement..."
+#           ./deploy/deploy.sh
           
-          echo "🎉 Déploiement terminé avec succès!"
+#           echo "🎉 Déploiement terminé avec succès!"
